<resources>
    <string name="app_name">Music App</string>
    <string name="title">My Music</string>
    <string name="song">Songs</string>
    <string name="play_list">Playlists</string>
    <string name="setting">Settings</string>
    <string name="youtube">Youtube</string>
    <string name="create_playlist">Create new playlist</string>
    <string name="start">00:00</string>
    <string name="end">03:00</string>
    <string name="name">Artist Name - Song Name</string>

</resources>