<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line2"
        android:layout_width ="0dp"
        android:layout_height ="0dp"
        android:orientation ="vertical"
        app:layout_constraintGuide_percent ="0.5"/>

    <androidx.constraintlayout.widget.Guideline
        android:id ="@+id/guide_line1"
        android:layout_width ="0dp"
        android:layout_height ="0dp"
        android:orientation ="horizontal"
        app:layout_constraintGuide_percent ="0.5"/>

    <ImageView
        android:id="@+id/image4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="true"
        android:scaleType="center"
        app:layout_constraintBottom_toTopOf="@+id/guide_line1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/music_logo"
        tools:ignore="ContentDescription"
        tools:srcCompat="@drawable/music_logo" />

    <Button
        android:id="@+id/btn_songs1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/green_bg"
        android:text="@string/song"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_songs3"
        app:layout_constraintEnd_toStartOf="@+id/btn_songs2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image4" />

    <Button
        android:id="@+id/btn_songs2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/green_bg"
        android:textColor="@android:color/white"
        android:text="@string/play_list"
        app:layout_constraintBottom_toTopOf="@+id/btn_songs4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_songs1"
        app:layout_constraintTop_toBottomOf="@+id/image4" />

    <Button
        android:id="@+id/btn_songs3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/green_bg2"
        android:text="@string/setting"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_songs4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_songs1"
        app:layout_constraintVertical_bias="0.633" />

    <Button
        android:id="@+id/btn_songs4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/green_bg2"
        android:text="@string/youtube"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_songs3"
        app:layout_constraintTop_toBottomOf="@+id/btn_songs2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>